...
        .onAppear {
            Task {
                await viewModel.reloadUserProfile()
            }
        }
        .confirmationDialog("Choose Photo", isPresented: $showActionSheet) {
            Button("Photo Library") {
                showLibrary = true
            }
            
            Button("Take Photo") {
                showImagePicker = true
            }
            
            Button("Cancel", role: .cancel) { }
        }
        .sheet(isPresented: $showImagePicker) {
...
